@@ -1,4 +1,4 @@
-$Id: History,v 1.32 2000-06-25 14:15:25 stesting Exp $
+$Id: History,v 1.33 2000-07-22 10:52:27 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+22 July 2000 Makoto Asai (interfaces-V02-00-00)
+- Modify G4UIterminal, G4VUIshell, G4UIcsh and G4UItcsh to display the
+  break status as a prompt characters.
 
 25 June 2000 John Allison (interfaces-V01-01-06-old-G4UIterminal)
 - As interfaces-V01-01-06 but old revisions of G4UIterminal.cc/hh.
